--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">WebStudio</a>
+        <a href="/index.html">WebStudio</a>
         <nav>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>     
+        </ul>
     </header>
     <main>
         <!-- Banner -->
@@ -53,11 +53,45 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="Настройка по алгоритму" alt="" width="370" height="294"></li>
-                <li><img src="Выбор мобильного интерфейса" alt="" width="370" height="294"></li>
-                <li><img src="Подбор цветовой гаммы" alt="" width="370" height="294"></li>
+                <li><img src="/images/what_we_are_doing_box_1.jpg" alt="Настройка по алгоритму" width="370" height="294"></li>
+                <li><img src="/images/what_we_are_doing_box_2.jpg" alt="Выбор мобильного интерфейса" width="370" height="294"></li>
+                <li><img src="/images/what_we_are_doing_box_3.jpg" alt="Подбор цветовой гаммы" width="370" height="294"></li>
+            </ul>
+        </section>
+        <!-- Our team -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="/images/Our_Team_Igor_Demyanenko.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="/images/Our_Team_Olga_Repina.jpg" alt="Ольга Репина" width="270" height="260">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="/images/Our_Team_Nikolay_Tarasov.jpg" alt="Николай Тарасов" width="270" height="260">
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="/images/Our_Team_Mihaylo_Ermakov.jpg" alt="Михаил Ермаков" width="270" height="260">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
             </ul>
         </section>
     </main>
+    <footer>
+        <a href="/index.html">WebStudio</a>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26<br/>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br/>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
+    </footer>
 </body>
 </html>
