--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="/images/what_we_are_doing_box_1.jpg" alt="Настройка по алгоритму" width="370" height="294"></li>
-                <li><img src="/images/what_we_are_doing_box_2.jpg" alt="Выбор мобильного интерфейса" width="370" height="294"></li>
-                <li><img src="/images/what_we_are_doing_box_3.jpg" alt="Подбор цветовой гаммы" width="370" height="294"></li>
+                <li><img src="./images/what_we_are_doing_box_1.jpg" alt="Настройка по алгоритму" width="370" height="294"></li>
+                <li><img src="./images/what_we_are_doing_box_2.jpg" alt="Выбор мобильного интерфейса" width="370" height="294"></li>
+                <li><img src="./images/what_we_are_doing_box_3.jpg" alt="Подбор цветовой гаммы" width="370" height="294"></li>
             </ul>
         </section>
         <!-- Our team -->
