--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <nav>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -63,22 +63,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="/images/Our_Team_Igor_Demyanenko.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                    <img src="./images/Our_Team_Igor_Demyanenko.jpg" alt="Игорь Демьяненко" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/Our_Team_Olga_Repina.jpg" alt="Ольга Репина" width="270" height="260">
+                    <img src="./images/Our_Team_Olga_Repina.jpg" alt="Ольга Репина" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/Our_Team_Nikolay_Tarasov.jpg" alt="Николай Тарасов" width="270" height="260">
+                    <img src="./images/Our_Team_Nikolay_Tarasov.jpg" alt="Николай Тарасов" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/Our_Team_Mihaylo_Ermakov.jpg" alt="Михаил Ермаков" width="270" height="260">
+                    <img src="./images/Our_Team_Mihaylo_Ermakov.jpg" alt="Михаил Ермаков" width="270" height="260">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -86,7 +86,7 @@
         </section>
     </main>
     <footer>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <address>
             г. Киев, пр-т Леси Украинки, 26<br/>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a><br/>
