--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" lang="en">WebStudio</a>
         <nav>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -86,7 +86,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" lang="en">WebStudio</a>
         <address>
             г. Киев, пр-т Леси Украинки, 26<br/>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a><br/>
