Footer list and Our team lang

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               height="260"
             />
             <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img
@@ -105,7 +105,7 @@
               height="260"
             />
             <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -115,7 +115,7 @@
               height="260"
             />
             <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -125,7 +125,7 @@
               height="260"
             />
             <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -133,8 +133,8 @@
     <footer>
       <a href="./index.html" lang="en">WebStudio</a>
       <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
+          <li><a href="https://goo.gl/maps/iV2inNFUjzkezDSY9" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
