--- a/index.html
+++ b/index.html
@@ -134,7 +134,14 @@
       <a href="./index.html" lang="en">WebStudio</a>
       <address>
         <ul>
-          <li><a href="https://goo.gl/maps/iV2inNFUjzkezDSY9" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li>
+            <a
+              href="https://goo.gl/maps/iV2inNFUjzkezDSY9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
